syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pehrs.grpc.rag.sample";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package ragsample;

service RagSample {
  rpc Ask (AskRequest) returns (AskReply) {}
}

message AskRequest {
  string question = 1;
}

message AskReply {
  string answer = 1;
}
